--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
       @import url(http://fonts.googleapis.com/css?family=Droid+Serif);
       @import url(http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
 
+      .remark-slide .remark-slide-content {
+        padding-left: 2em;
+        padding-right: 2em;
+      }
       .remark-slide-content {
         font-family: 'Droid Serif';
         font-size: 20px;
@@ -18,7 +22,10 @@
       }
       .remark-slide-content h1 { font-size: 4em; }
       .remark-slide-content h2 { font-size: 2em; }
-      .remark-slide-content h3 { font-size: 1.6em; }
+      .remark-slide-content h3 {
+        font-size: 1.6em;
+        line-height: .6em;
+      }
       .footnote {
         position: absolute;
         bottom: 3em;
