Add class scaled for scaling images

--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
         width: 75%;
         float: right;
       }
+      .scale img {
+        width: 100%;
+      }
     </style>
   </head>
   <body>
