Tweak 2 column layout CSS

--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
         float: right;
         width: 47%;
       }
+      .pull-left h3, .pull-right h3 {
+        line-height: .25em;
+      }
       .pull-right ~ p {
         clear: both;
       }
