Add classes for 30/70index.html columns

--- a/index.html
+++ b/index.html
@@ -59,6 +59,14 @@
         float: right;
         width: 47%;
       }
+      .left30 {
+        float: left;
+        width: 28%;
+      }
+      .right70 {
+        float: right;
+        width: 68%;
+      }
       .pull-left h3, .pull-right h3 {
         line-height: .25em;
       }
