--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <title>Firedrake: a High-level, Portable Finite Element Computation Framework</title>
+    <link rel="icon" type="image/png" href="favicon.png">
     <style type="text/css" media="screen">
       @import url(http://fonts.googleapis.com/css?family=Droid+Serif);
       @import url(http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
