--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <title>Firedrake: a High-level, Portable Finite Element Computation Framework</title>
     <link rel="icon" type="image/png" href="favicon.png">
-    <style type="text/css" media="screen">
+    <style type="text/css">
       @import url(http://fonts.googleapis.com/css?family=Droid+Serif);
       @import url(http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
 
